--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -10,16 +10,13 @@
       order: unset;
       padding-top: 3rem;
     }
-
     @media only screen and (min-width: 1023px) {
       padding-left: 0;
       padding-right: 0;
     }
-
     .heading {
       white-space: initial;
       padding-top: 1rem;
-
       @include sm {
         padding-top: 6rem;
       }
@@ -31,7 +28,7 @@
       }
     }
 
-    .description-story {
+    .bottom-text {
       position: relative;
 
       @include sm {
@@ -40,481 +37,10 @@
         bottom: 0;
         line-height: $line-height-150;
       }
-      .story-name {
-        border-bottom: 2px solid #30ea03;
-      }
+    }
+    .bordered-text {
+      border-bottom: 2px solid var(--border-color-2);
     }
   }
 }
 
-.planet-people-banner {
-  .heading {
-    margin-top: 5px;
-    margin-left: 2rem;
-    @include sm {
-      margin-top: 5rem;
-    }
-
-    @include sd {
-      margin-top: 3rem;
-    }
-
-    .heading-bg-strip {
-      width: 80%;
-      margin-left: -2rem;
-      padding-left: 2rem;
-
-      @include sm {
-        width: 100vw;
-      }
-
-      &:before {
-        top: 0;
-
-        @include sm {
-          top: 100%;
-        }
-      }
-
-      &:after {
-        top: -100%;
-
-        @include sm {
-          top: 0;
-        }
-      }
-    }
-  }
-
-  .banner-subheading {
-    margin-left: 2rem;
-  }
-
-  .image {
-    order: 2;
-
-    @include sm {
-      order: unset;
-    }
-  }
-
-  .progress-report-btn {
-    position: relative;
-
-    @include sm {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
-  }
-}
-
-.planet-people-banner {
-  .heading {
-    margin-top: 5px;
-
-    margin-left: 2rem;
-
-    @include sm {
-      margin-top: 5rem;
-    }
-
-    @include sd {
-      margin-top: 3rem;
-    }
-
-    .heading-bg-strip {
-      width: 80%;
-
-      margin-left: -2rem;
-
-      padding-left: 2rem;
-
-      @include sm {
-        width: 100vw;
-      }
-
-      &:before {
-        top: 0;
-
-        @include sm {
-          top: 100%;
-        }
-      }
-
-      &:after {
-        top: -100%;
-
-        @include sm {
-          top: 0;
-        }
-      }
-    }
-  }
-
-  .banner-subheading {
-    margin-left: 2rem;
-  }
-
-  .image {
-    order: 2;
-
-    @include sm {
-      order: unset;
-    }
-  }
-
-  .progress-report-btn {
-    position: relative;
-
-    @include sm {
-      position: absolute;
-
-      bottom: 0;
-
-      right: 0;
-    }
-  }
-}
-
-// .profile--hero--banner {
-//   .card-content-container {
-//     padding: 1rem 1.5rem;
-
-//     @media (min-width: $breakpoint-sd-min) {
-//       padding: 3rem;
-//     }
-
-//     @media (max-width: $breakpoint-sd-max) {
-//       flex-shrink: initial !important;
-//     }
-//   }
-// }
-// .homepage-banner {
-//   position: relative;
-
-//   @include sd {
-//     padding-top: 0rem;
-//   }
-
-//   .home-hero-content {
-//     padding-top: 8rem;
-
-//     @include lg {
-//       padding-left: 0rem;
-//     }
-
-//     @include sd {
-//       padding-top: 6rem;
-//       padding-left: 1rem;
-//     }
-
-//     @include sm {
-//       padding-top: 0.5rem;
-//     }
-
-//     h1 {
-//       white-space: nowrap;
-//     }
-
-//     .big-text {
-//       white-space: nowrap;
-
-//       @include sd {
-//         white-space: initial;
-//       }
-//     }
-//     .small {
-//       line-height: $line-height-150;
-//     }
-//   }
-
-//   .imageCompatibleMarkup.image {
-//     img {
-//       padding-bottom: 50px;
-
-//       @include sm {
-//         padding-bottom: 1.5rem;
-//       }
-//     }
-//   }
-// }
-// .profile--hero--banner .card-content-container {
-//   padding: 2rem 1.5rem !important;
-// }
-// @media only screen and (min-width: 1023px) {
-//   .profile--hero--banner .card-content-container {
-//     padding: 0 3.5rem !important;
-//   }
-// }
-
-// .contact-page-banner {
-//   .box.component:first-of-type {
-//     .richText.component {
-//       margin-top: 0rem;
-//       margin-left: 0rem;
-
-//       @include sm {
-//         margin-top: 1.5rem;
-//       }
-//     }
-
-//     .image {
-//       margin-top: 0;
-//       z-index: 2;
-
-//       @include sm {
-//         z-index: 0;
-//       }
-//     }
-//   }
-
-//   h1 {
-//     margin-bottom: 0;
-//     margin-left: 8rem;
-//   }
-
-//   .box.component:nth-child(3) {
-//     .image.component {
-//       @include sm {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
-// .contact-page-banner.flex > * > .paragraphSystem {
-//   align-items: flex-end;
-// }
-
-// .planet-people-hero {
-//   &.-title {
-//     margin-left: 2rem;
-//     margin-top: 4.5rem;
-
-//     @include lg {
-//       margin-top: 3.5rem;
-//     }
-
-//     @include sd {
-//       margin-top: 5rem;
-//     }
-
-//     @include sm {
-//       margin-top: 5px;
-//       margin-left: 2rem;
-//       margin-bottom: 0.5rem;
-//     }
-//   }
-
-//   &.-para {
-//     margin-left: 2rem;
-//     @include sm {
-//       margin-bottom: 1.5rem;
-//     }
-//   }
-
-//   .richText:nth-child(3) {
-//     position: absolute;
-//     bottom: 0;
-//     right: 0;
-
-//     @include sm {
-//       bottom: -80px !important;
-//       right: 3% !important;
-//     }
-//   }
-
-//   .image {
-//     @include sm {
-//       order: 2 !important;
-//       margin-top: 2rem;
-//     }
-//   }
-
-//   .component-content {
-//     line-height: 0;
-//   }
-
-//   .paragraphSystem {
-//     overflow: visible;
-//   }
-
-//   .box.component {
-//     .richText:nth-child(3) {
-//       position: absolute;
-//       bottom: 0;
-//       right: 0;
-//     }
-//   }
-//   & + .box.component {
-//     z-index: 10;
-//   }
-//   + .box.component {
-//     z-index: 11;
-//   }
-// }
-
-// @media screen and (max-width: 1180px) and (min-width: 1024) {
-//   .hcp-pharma-banner-content-section {
-//     z-index: 1;
-//     left: 10%;
-//     width: 80%;
-//     position: absolute !important;
-//     transform: 0 !important;
-//     top: 20rem;
-//     padding: 3rem !important;
-//   }
-// }
-
-// .hcp-pharma-banner-content-section {
-//   z-index: 1;
-//   left: 20%;
-
-//   @media screen and (max-width: 1200px) {
-//     top: 30rem;
-//     left: 10%;
-//     width: 80%;
-//   }
-
-//   @include sd {
-//     z-index: 1;
-//     left: 10%;
-//     width: 80%;
-//     position: absolute !important;
-//     transform: 0 !important;
-//     top: 31rem;
-//     padding: 3rem !important;
-
-//     .sd-btn {
-//       display: block !important;
-//     }
-//   }
-
-//   @include sm {
-//     left: 0;
-//     position: absolute !important;
-//     top: 17rem;
-//     padding: 2.5rem !important;
-//     width: 90%;
-//   }
-
-//   @include xs {
-//     top: 11rem !important;
-//   }
-// }
-
-// .pharma-hcp-banner-first-section {
-//   @include sd {
-//     height: 42rem;
-
-//     .paragraphSystem {
-//       display: block !important;
-//     }
-//   }
-
-//   @include sm {
-//     height: 37rem;
-
-//     .paragraphSystem {
-//       display: block !important;
-//     }
-//   }
-// }
-
-// .planet-people-banner {
-//   div {
-//     @include sd {
-//       align-items: flex-start;
-//     }
-//   }
-
-//   .box.component {
-//     @include sd {
-//       margin-top: 1.5rem;
-//       padding-left: 0 !important;
-//       padding-right: 0 !important;
-//     }
-
-//     h1 {
-//       margin-bottom: 0;
-
-//       .left-strong-bar::before {
-//         content: '';
-//         width: 10vw;
-//         background: var(--bg-color-2) !important;
-//         display: block;
-//         height: 88px;
-//         position: absolute;
-//         left: -50vw;
-//         top: 178px;
-//         z-index: -1;
-//       }
-//     }
-
-//     .image.component {
-//       @include sd {
-//         display: none;
-//       }
-//     }
-//   }
-
-//   .image.component {
-//     img {
-//       @include sd {
-//         width: 60%;
-//         display: block;
-//         margin-left: auto;
-//         margin-right: 4rem;
-//       }
-
-//       @include sm {
-//         width: auto;
-//         margin-right: auto;
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 1023px) and (min-width: 768px) {
-//   .pharma-hcp-banner-first-section {
-//     height: 47rem;
-
-//     .stand-banner-content-sec {
-//       position: absolute;
-//     }
-//   }
-// }
-
-// .care-for-humanity-banner {
-//   .imageCompatibleMarkup.image {
-//     img {
-//       padding-bottom: 0 !important;
-//     }
-//   }
-// }
-// .page-health-professionals {
-//   .homepage-banner .imageCompatibleMarkup.image img {
-//     padding-bottom: 0 !important;
-//   }
-// }
-
-// .media-banner.flex > * > .paragraphSystem {
-//   -webkit-box-align: end;
-//   -ms-flex-align: end;
-//   align-items: flex-end;
-// }
-
-// .who-we-are-banner {
-//   .healthcare-box {
-//     span.a-health-txt {
-//       @include lg {
-//         letter-spacing: -2px;
-//       }
-
-//       @include sd {
-//         letter-spacing: initial;
-//       }
-//     }
-//   }
-// }
