--- a/src/scss/default/theme/colors/_index.scss
+++ b/src/scss/default/theme/colors/_index.scss
@@ -24,7 +24,7 @@ $black: #000000 !default;
 */
 $color-1: #bf6f7e !default;
 $color-2: #364959 !default;
-$color-3: #9e9e9e !default;
+$color-3: #f2f2f2 !default;
 $color-4: #f2bfbb !default;
 $color-5: #bf7a7a !default;
 $color-6: #e7e5d9 !default;
