--- a/src/scss/brand/components/image-card/_index.scss
+++ b/src/scss/brand/components/image-card/_index.scss
@@ -29,31 +29,21 @@
     text-align: center;
     font-size: 20px;
     background-color: $color-primary;
-    // background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
     position: absolute;
-    background-size: 20px;
-    background-repeat: no-repeat;
-    right: 2px;
-    bottom: 2px;
-    top: initial;
-    left: initial;
-    height: 72px;
+    right: 0;
+    bottom: 0;
     width: 72px;
     line-height: 72px;
     color: $color-2;
-    background-position: center;
-    outline: 2px solid $color-primary;
   }
-  &.arrow-size-40 {
+  &.arrow-size-small {
     &:after {
-      height: 40px;
       width: 40px;
       line-height: 40px;
     }
   }
-  &.arrow-size-48 {
+  &.arrow-size-medium {
     &:after {
-      height: 48px;
       width: 48px;
       line-height: 48px;
     }
