--- a/src/scss/default/theme/common-framework-overrides/_index.scss
+++ b/src/scss/default/theme/common-framework-overrides/_index.scss
@@ -50,6 +50,15 @@ img {
   }
 }
 
+@media (max-width: $breakpoint-sm-max) {
+  #header,
+  #footer,
+  #content {
+    padding: 0;
+    width: 100vw;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
