--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -76,10 +76,16 @@ body {
           font-size: calc(
             #{$font-size-h1-mobile} + #{$font-size-body-large-mobile}
           );
+          line-height: calc(
+            #{$line-height-h1-mobile} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h1} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h1} + #{$line-height-large-desktop}
             );
           }
         }
@@ -89,10 +95,16 @@ body {
           font-size: calc(
             #{$font-size-h2-mobile} + #{$font-size-body-large-mobile}
           );
+          line-height: calc(
+            #{$line-height-h2-mobile} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h2} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h2} + #{$line-height-large-desktop}
             );
           }
         }
@@ -102,10 +114,16 @@ body {
           font-size: calc(
             #{$font-size-h3-mobile} + #{$font-size-body-large-mobile}
           );
+          line-height: calc(
+            #{$line-height-h3-mobile} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h3} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h3} + #{$line-height-large-desktop}
             );
           }
         }
@@ -113,10 +131,16 @@ body {
         h4,
         .h4 {
           font-size: calc(#{$font-size-h4} + #{$font-size-body-large-mobile});
+          line-height: calc(
+            #{$line-height-h4} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h4} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h4} + #{$line-height-large-desktop}
             );
           }
         }
@@ -126,10 +150,16 @@ body {
           font-size: calc(
             #{$font-size-body-mobile} + #{$font-size-body-large-mobile}
           );
+          line-height: calc(
+            #{$line-height-body-mobile} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-body} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-body} + #{$line-height-large-desktop}
             );
           }
         }
@@ -139,10 +169,16 @@ body {
           font-size: calc(
             #{$font-size-body-mobile} + #{$font-size-body-large-mobile}
           );
+          line-height: calc(
+            #{$line-height-body-mobile} + #{$line-height-body-large-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-body} + #{$font-size-body-large-desktop}
+            );
+            line-height: calc(
+              #{$line-height-body} + #{$line-height-large-desktop}
             );
           }
         }
@@ -161,10 +197,16 @@ body {
           font-size: calc(
             #{$font-size-h1-mobile} + #{$font-size-body-larger-mobile}
           );
+          line-height: calc(
+            #{$line-height-h1-mobile} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h1} + #{$font-size-body-larger-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h1} + #{$line-height-larger-desktop}
             );
           }
         }
@@ -174,10 +216,16 @@ body {
           font-size: calc(
             #{$font-size-h2-mobile} + #{$font-size-body-larger-mobile}
           );
+          line-height: calc(
+            #{$line-height-h2-mobile} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h2} + #{$font-size-body-larger-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h2} + #{$line-height-larger-desktop}
             );
           }
         }
@@ -187,10 +235,16 @@ body {
           font-size: calc(
             #{$font-size-h3-mobile} + #{$font-size-body-larger-mobile}
           );
+          line-height: calc(
+            #{$line-height-h3-mobile} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h3} + #{$font-size-body-larger-desktop}
+            );
+            line-height: calc(
+              #{$line-height-h3} + #{$line-height-larger-desktop}
             );
           }
         }
@@ -198,21 +252,16 @@ body {
         h4,
         .h4 {
           font-size: calc(#{$font-size-h4} + #{$font-size-body-larger-mobile});
+          line-height: calc(
+            #{$line-height-h4} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-h4} + #{$font-size-body-larger-desktop}
             );
-          }
-        }
-
-        h5,
-        .h5 {
-          font-size: calc(#{$font-size-h5} + #{$font-size-body-larger-mobile});
-
-          @media (min-width: $breakpoint-md-min) {
-            font-size: calc(
-              #{$font-size-h5} + #{$font-size-body-larger-desktop}
+            line-height: calc(
+              #{$line-height-h4} + #{$font-size-body-larger-desktop}
             );
           }
         }
@@ -222,10 +271,16 @@ body {
           font-size: calc(
             #{$font-size-body-mobile} + #{$font-size-body-larger-mobile}
           );
+          line-height: calc(
+            #{$line-height-body-mobile} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-body} + #{$font-size-body-larger-desktop}
+            );
+            line-height: calc(
+              #{$line-height-body} + #{$line-height-larger-desktop}
             );
           }
         }
@@ -235,10 +290,16 @@ body {
           font-size: calc(
             #{$font-size-body-mobile} + #{$font-size-body-larger-mobile}
           );
+          line-height: calc(
+            #{$line-height-body-mobile} + #{$line-height-body-larger-mobile}
+          );
 
           @media (min-width: $breakpoint-md-min) {
             font-size: calc(
               #{$font-size-body} + #{$font-size-body-larger-desktop}
+            );
+            line-height: calc(
+              #{$line-height-body} + #{$line-height-larger-desktop}
             );
           }
         }
@@ -286,11 +347,11 @@ body {
     font-family: $font-family-secondary;
     font-size: $font-size-h1-mobile;
     font-weight: $font-weight-h1;
-    margin: 0 0 1rem 0;
-    line-height: $line-height-125;
+    line-height: $line-height-h1-mobile;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h1;
+      line-height: $line-height-h1;
     }
   }
 
@@ -300,11 +361,11 @@ body {
     font-family: $font-family-secondary;
     font-size: $font-size-h2-mobile;
     font-weight: $font-weight-h2;
-    margin: 0 0 1rem 0;
-    line-height: $line-height-125;
+    line-height: $line-height-h2-mobile;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h2;
+      line-height: $line-height-h2;
     }
   }
 
@@ -314,11 +375,11 @@ body {
     font-family: $font-family-secondary;
     font-size: $font-size-h3-mobile;
     font-weight: $font-weight-h3;
-    margin: 0 0 1rem 0;
-    line-height: $line-height-130;
+    line-height: $line-height-h3-mobile;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-h3;
+      line-height: $line-height-h3;
     }
   }
 
@@ -328,24 +389,26 @@ body {
     font-family: $font-family-secondary;
     font-size: $font-size-h4;
     font-weight: $font-weight-h4;
-    line-height: $line-height-150;
+    line-height: $line-height-h4;
 
     @media (min-width: $breakpoint-sm-min) {
       //desktop styles
+      line-height: $line-height-h4-mobile;
       font-size: $font-size-h4-mobile;
     }
   }
 
   p,
   .p {
-    color: $secondary-text-color;
+    color: $primary-text-color;
     font-family: $font-family-primary;
     font-size: $font-size-body-mobile;
     font-weight: $font-weight-body;
-    line-height: $line-height-150;
+    line-height: $line-height-body-mobile;
 
     @media (min-width: $breakpoint-md-min) {
       font-size: $font-size-body;
+      line-height: $line-height-body;
     }
   }
 
@@ -454,6 +517,21 @@ body {
     margin-left: 0;
     margin-right: 0;
   }
+
+  img {
+    width: 100%;
+  }
+
+  img[src$='.svg'] {
+    width: 100%;
+  }
+
+  @media (min-width: $breakpoint-sm-min) and (max-width: $breakpoint-md-max) {
+    //desktop styles
+    img {
+      max-width: 100vw !important;
+    }
+  }
 }
 
 // create link styles
@@ -475,11 +553,6 @@ body {
   a {
     color: inherit;
     text-decoration: none;
-  }
-}
-body {
-  img {
-    width: auto;
   }
 }
 
