--- a/src/scss/brand/components/_components.scss
+++ b/src/scss/brand/components/_components.scss
@@ -1,7 +1,7 @@
 //components
 @import 'rich-text/index';
 @import 'accordion/index';
-@import 'arrow-down/index';
+@import 'arrow-links/index';
 @import 'carousel/index';
 @import 'footer/index';
 @import 'fonts/index';
@@ -10,8 +10,7 @@
 @import 'green-bg-title/index';
 @import 'hero-banner/index';
 @import 'mega-menu/index';
-@import 'overlap-content/index';
-@import 'overlap-title/index';
+@import 'positioned-banner-wrapper/index';
 @import 'page-components/index';
 @import 'profile/index';
 @import 'quote/index';
